2009-12-12  Kenichi Handa  <handa@m17n.org>

	* ftfont.c (struct ftfont_info): New member matrix.
	(ftfont_open): Setup xftfont_info->matrix.
	(MFLTFontFT): New member matrix.
	(FLOOR, CEIL, ROUND): New macros.
	(ftfont_get_metrics): Handle matrix transformation.
	(ftfont_shape_by_flt): New arg matrix.  Callers changed.

	* xftfont.c (struct xftfont_info): New member matrix.
	(xftfont_open): Setup xftfont_info->matrix.

2009-12-10  Kenichi Handa  <handa@m17n.org>

	* xdisp.c (append_space_for_newline): Consider face-remapping.

2009-12-09  Andreas Schwab  <schwab@linux-m68k.org>

	* xsettings.c: Include "keyboard.h".

	* gtkutil.c (xg_tool_bar_proxy_help_callback): Fix missing return.

	Fix implicit function declarations.
	* cmds.c: Include "frame.h".
	* frame.c: Include "font.h" also if !HAVE_WINDOW_SYSTEM.
	* frame.h: Move declaration of delete_frame outside of
	HAVE_WINDOW_SYSTEM.

2009-12-09  Ken Brown  <kbrown@cornell.edu>  (tiny change)

	* s/cygwin.h (G_SLICE_ALWAYS_MALLOC): New variable.

	* emacs.c (main): Set the G_SLICE environment variable for Cygwin
	GTK builds.

2009-12-07  Andreas Schwab  <schwab@linux-m68k.org>

	* unexelf.c (unexec): Don't search for .data twice.

2009-12-05  Chong Yidong  <cyd@stupidchicken.com>

	* xdisp.c (push_display_prop): Don't set avoid_cursor_p.  Return 0
	if push failed.
	(handle_line_prefix): Set avoid_cursor_p here.  Check return value
	of push_display_prop (Bug#5000).

	* xfaces.c (Fx_family_fonts): Handle 2009-07-14 change to return
	value of font_list_entities (Bug#5085).

2009-12-04  Juanma Barranquero  <lekktu@gmail.com>

	Fix `string-to-number' to deal consistently with integers and floats.
	* lread.c (isfloat_string): New argument ignore_trailing to accept all
	trailing characters, not just whitespace.
	(read1): Pass new arg 0 to keep old behavior.
	* data.c (Fstring_to_number): Pass 1 to isfloat_string to ignore
	trailing chars, as it is already done for integers.  Doc fixes.